--- a/demo/index.html
+++ b/demo/index.html
@@ -72,7 +72,7 @@
       <label for="source">Select Reference Source*:</label>
       <select name="source" id="source" class="form-control" required>
         <option value="words.txt">words.txt(default)</option>
-        <option value="2600-0.txt">2600-0.txt(slow)</option>
+        <option value="2600-0.txt" disabled>2600-0.txt(slow)</option>
       </select>
     </div>
     <div class="form-group">
